--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,8 +7,12 @@
 <div>
    display user details
 </div>
+<div >
+  <a asp-controller="Home" asp-action="EmployeeDetails"> Add New</a>
+</div>
 <table>
     <thead>
+
         <tr>
             <th>
                 Employee_Name
@@ -50,3 +54,5 @@
     }
     </tbody>
         </table>
+        
+
